* Fixed few layout issues in studies materials dialog

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -803,6 +803,7 @@
   @include breakpoint($breakpoint-pad) {
     font-size: 1rem;
     font-weight: 400;
+    padding: 0 20px 0 0;
   }
 }
 
